# simple-ws-server

./: Cargo.toml  README.md  settings-default.toml
src/: http.rs  lib.rs  main.rs  settings.rs
src/http/: common.rs  handler.rs  headers.rs  request.rs  response.rs  server.rs
src/http/handler/: echo.rs  websocket.rs
src/util/: temp.rs
