[package]
name = "simple-ws-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.56"
async-trait = "0.1.53"
base64 = "0.13.0"
chrono = "0.4.19"
config = "0.13.1"
env_logger = "0.9.0"
futures = "0.3.21"
getset = "0.1.2"
human-size = { version = "0.4.2", features = ["serde"] }
log = "0.4.16"
once_cell = "1.10.0"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
sha1 = "0.10.1"
tokio = { version = "1.17.0", features = ["full"] }
uuid = { version = "0.8.2", features = ["v4"] }
